--- a/dashboard.html
+++ b/dashboard.html
@@ -20,9 +20,10 @@
 <link rel="modulepreload" href="./_import/components/osgb/index.1d2476df.js">
 <link rel="modulepreload" href="./_import/components/model.0139f19a.js">
 <link rel="modulepreload" href="./_import/components/budgetAllocator.46c04ac3.js">
-<link rel="modulepreload" href="./_import/components/miniDecarbModel.896b53aa.js">
+<link rel="modulepreload" href="./_import/components/miniDecarbModel.ae719dd9.js">
 <link rel="modulepreload" href="./_import/components/sorterTable.b455407f.js">
 <link rel="modulepreload" href="./_import/components/timeline.3a79ace5.js">
+<link rel="modulepreload" href="./_import/components/yearpicker/yearpicker.84e70975.js">
 <link rel="modulepreload" href="./_import/components/helpers.cfd3e683.js">
 <link rel="modulepreload" href="./_import/components/utils.ca7eec9b.js">
 <link rel="modulepreload" href="./_npm/d3@7.9.0/_esm.js">
@@ -207,20 +208,20 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1732330954745});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1732330954757});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1732330954757});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1732330954757});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1732426160754});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1732426160766});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1732426160766});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1732426160766});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
-define({id: "06001a1f", outputs: ["d3","flubber","require","Mutable","TimeGlyph","GlyphCollection","turf","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","Model","BudgetAllocator","MiniDecarbModel","createTable","createTimelineInterface","inferTypes","enrichGeoData","normaliseData","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
-const [{require}, {Mutable}, {TimeGlyph, GlyphCollection}, turf, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {Model}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {createTimelineInterface}, {inferTypes, enrichGeoData, normaliseData}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/model.0139f19a.js"), import("./_import/components/budgetAllocator.46c04ac3.js"), import("./_import/components/miniDecarbModel.896b53aa.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/timeline.3a79ace5.js"), import("./_import/components/helpers.cfd3e683.js"), import("./_import/components/utils.ca7eec9b.js")]);
+define({id: "f286dfde", outputs: ["d3","flubber","require","Mutable","TimeGlyph","GlyphCollection","turf","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","Model","BudgetAllocator","MiniDecarbModel","createTable","createTimelineInterface","YearPicker","inferTypes","enrichGeoData","normaliseData","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
+const [{require}, {Mutable}, {TimeGlyph, GlyphCollection}, turf, {RadialGlyph}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {Model}, {BudgetAllocator}, {MiniDecarbModel}, {createTable}, {createTimelineInterface}, {YearPicker}, {inferTypes, enrichGeoData, normaliseData}, {downloadBoundaries, joinCensusDataToGeoJSON, convertGridCsvToGeoJson, context2d}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_import/components/glyph-designs/timeGlyph.30b74103.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_import/components/radialglyph.e10c9304.js"), import("./_import/components/gridded-glyphmaps/index.min.e22a1d11.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/model.0139f19a.js"), import("./_import/components/budgetAllocator.46c04ac3.js"), import("./_import/components/miniDecarbModel.ae719dd9.js"), import("./_import/components/sorterTable.b455407f.js"), import("./_import/components/timeline.3a79ace5.js"), import("./_import/components/yearpicker/yearpicker.84e70975.js"), import("./_import/components/helpers.cfd3e683.js"), import("./_import/components/utils.ca7eec9b.js")]);
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
 
 
 
-return {d3,flubber,require,Mutable,TimeGlyph,GlyphCollection,turf,RadialGlyph,glyphMap,createDiscretiserValue,_drawCellBackground,OSGB,Model,BudgetAllocator,MiniDecarbModel,createTable,createTimelineInterface,inferTypes,enrichGeoData,normaliseData,downloadBoundaries,joinCensusDataToGeoJSON,convertGridCsvToGeoJson,context2d};
+return {d3,flubber,require,Mutable,TimeGlyph,GlyphCollection,turf,RadialGlyph,glyphMap,createDiscretiserValue,_drawCellBackground,OSGB,Model,BudgetAllocator,MiniDecarbModel,createTable,createTimelineInterface,YearPicker,inferTypes,enrichGeoData,normaliseData,downloadBoundaries,joinCensusDataToGeoJSON,convertGridCsvToGeoJson,context2d};
 }});
 
 define({id: "5dd85f8f", inputs: ["OSGB"], outputs: ["proj"], body: (OSGB) => {
@@ -491,7 +492,7 @@ define({id: "09682a6e", body: () => {
 // );
 }});
 
-define({id: "5ce378d0", inputs: ["Inputs","html","selectedIntervention","Generators","Event","allColumns"], outputs: ["techsInput","technology","totalBudgetInput","total_budget","startYearInput","start_year","projectLengthInput","project_length","allocationTypeInput","allocation_type","priorityInput","priority_input","filterInput","filter_input","glyphmapTypeInput","glyphmapType","mapAggregationInput","map_aggregate","morphFactorInput","morph_factor"], body: (Inputs,html,selectedIntervention,Generators,Event,allColumns) => {
+define({id: "9e56967a", inputs: ["Inputs","html","selectedIntervention","Generators","Event","allColumns"], outputs: ["techsInput","technology","totalBudgetInput","total_budget","startYearInput","start_year","projectLengthInput","project_length","allocationTypeInput","allocation_type","priorityInput","priority_input","filterInput","filter_input","glyphmapTypeInput","glyphmapType","mapAggregationInput","map_aggregate","morphFactorInput","morph_factor"], body: (Inputs,html,selectedIntervention,Generators,Event,allColumns) => {
 // list of decarb technologies
 const techsInput = Inputs.select(
   [
@@ -529,16 +530,27 @@ totalBudgetInput.style["max-width"] = "300px";
 const total_budget = Generators.input(totalBudgetInput);
 
 // Start Year
-const startYearInput = Inputs.text({
-  label: html`<b>Start Year</b>`,
-  placeholder: "Starting year?",
-  disabled: selectedIntervention ? true : false,
-  value: selectedIntervention
+// const startYearInput = Inputs.text({
+//   label: html`<b>Start Year</b>`,
+//   placeholder: "Starting year?",
+//   disabled: selectedIntervention ? true : false,
+//   value: selectedIntervention
+//     ? Number(Object.keys(selectedIntervention.yearlyStats)[0])
+//     : 2024,
+//   // submit: html`<button class="create-btn" style="color:white;">Submit</button>`,
+// });
+// startYearInput.style["max-width"] = "300px";
+const startYearInput = html`<input
+  style="width: 100%; max-width:100px; max-height: 25.5px;"
+  type="number"
+  value=${selectedIntervention
     ? Number(Object.keys(selectedIntervention.yearlyStats)[0])
-    : 2024,
-  // submit: html`<button class="create-btn" style="color:white;">Submit</button>`,
-});
-startYearInput.style["max-width"] = "300px";
+    : 2024}
+  step="1"
+  min="2024"
+  max="2080"
+  label="Start Year"
+/>`;
 // console.log("startYearInput.style", startYearInput.columns);
 const start_year = Generators.input(startYearInput);
 
@@ -1574,7 +1586,7 @@ return {createGlyphMap};
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
 <!-- ------------ Imports ------------ -->
-<div class="observablehq observablehq--block"><!--:06001a1f:--></div>
+<div class="observablehq observablehq--block"><!--:f286dfde:--></div>
 <div class="observablehq observablehq--block"><!--:5dd85f8f:--></div>
 <!-- ---------------- Data ---------------- -->
 <div class="observablehq observablehq--block"><!--:ab885abd:--></div>
@@ -1586,6 +1598,7 @@ return {createGlyphMap};
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="stylesheet" href="./_file/styles/dashboard.2badc1f5.css">
+<link rel="stylesheet" href="./_file/components/yearpicker/yearpicker.43170e1b.css">
 <style>
 body, html {
   height: 100%;
@@ -1612,8 +1625,8 @@ body, html {
     display: grid;
     grid-template-columns: 1fr 4fr;
     grid-template-rows: repeat(2, 1fr) 1fr;
-    gap: 8px; /* gap between grid items */
-    padding: 8px;
+    gap: 4px; /* gap between grid items */
+    padding: 2px;
     height: 92vh;
   }
 
@@ -1622,7 +1635,7 @@ body, html {
      /* Spans 2 rows */
     display: grid;
     /* grid-template-rows: 1fr 1fr; Two equal rows */
-    gap: 8px;
+    gap: 4px;
   }
 
 
@@ -1632,7 +1645,7 @@ body, html {
     display: grid;
     grid-template-rows: 4fr 2fr;
     height: 92vh;
-    gap: 8px;
+    gap: 4px;
   }
 
   .main-top {
@@ -1649,16 +1662,17 @@ body, html {
     gap: 8px;
   }
 
-    .card {
-      /* display: flex; /* Use Flexbox */
-      /* justify-content: center; Horizontally center content */
-      /* align-items: center; Vertically center content */
-      /* text-align: center; Center text alignment for multiline */ */
-      border: 1px dark-grey solid;
-      padding: 8px;
-      margin: 0 !important;
-      box-sizing: border-box; /* Ensure padding is included in height calculations */
-    }
+  .card {
+    /* display: flex; /* Use Flexbox */
+    /* justify-content: center; Horizontally center content */
+    /* align-items: center; Vertically center content */
+    /* text-align: center; Center text alignment for multiline */ */
+    border: 1px dark-grey solid;
+    padding: 8px;
+    margin: 0 !important;
+    border-radius: 0 !important;
+    box-sizing: border-box; /* Ensure padding is included in height calculations */
+  }
 
   .main-top,
   .main-bottom .card {
@@ -1780,7 +1794,9 @@ body, html {
         <observablehq-loading></observablehq-loading><!--:a4ca7b63:-->
       </div>
       <div class="form-group">
-        <observablehq-loading></observablehq-loading><!--:c73bfedc:-->
+        <div style="display:flex; flex-direction: row; align-items: center; min-height: 25.5px; gap: 60px;">
+        <span> <b>Start Year </b> </span> <observablehq-loading></observablehq-loading><!--:c73bfedc:-->
+        </div>
       </div>
       <div class="form-group">
         <label for="total-budget">Project length (years):</label>
@@ -1807,12 +1823,12 @@ body, html {
     <!-- <div class="card main-top">Map View</div> -->
     <div class="main-top">
       <div class="card" style="overflow-x:hidden; min-width: 400px;">
-      Sortable Table
+      <!-- <h2> Sortable Table </h2> -->
       <observablehq-loading></observablehq-loading><!--:27617c0d:-->
       <observablehq-loading></observablehq-loading><!--:2c706b74:-->
       </div>
-      <div class="card" style="overflow-x:hidden; min-width: 400px;">
-      Map View
+      <div class="card" style="overflow-x:hidden;overflow-y:hidden; min-width: 400px;">
+      <!-- <h2>Map View</h2> -->
       <observablehq-loading></observablehq-loading><!--:c0e452dc:-->
       <observablehq-loading></observablehq-loading><!--:3dea4862:-->
       <observablehq-loading></observablehq-loading><!--:a6dbfcfd:-->
@@ -1820,8 +1836,8 @@ body, html {
       </div>
     </div>
     <div class="main-bottom">
-      <div class="card">
-      <h2> General overview graph </h2>
+      <div class="card" style="overflow-y: scroll;">
+      <!-- <h2> General overview graph </h2> -->
       <br>
       <div id="graph-container">
         <div id="timeline-panel">
@@ -1842,7 +1858,7 @@ body, html {
       </div>
     </div>
     <div class="card">
-    Details on demand
+    <!-- <h2>Details on demand </h2> -->
     <observablehq-loading></observablehq-loading><!--:ec578e9e:-->
     </div>
   </div>
@@ -1850,7 +1866,7 @@ body, html {
 <div class="observablehq observablehq--block"><!--:e78cdcee:--></div>
 <div class="observablehq observablehq--block"><!--:09682a6e:--></div>
 <!-- ---------------- Input form declarations ---------------- -->
-<div class="observablehq observablehq--block"><!--:5ce378d0:--></div>
+<div class="observablehq observablehq--block"><!--:9e56967a:--></div>
 <div class="observablehq observablehq--block"><!--:fbf1b5a3:--></div>
 <div class="observablehq observablehq--block"><!--:39e29da4:--></div>
 <div class="observablehq observablehq--block"><!--:30ef2d9c:--></div>
