--- a/index.html
+++ b/index.html
@@ -156,8 +156,11 @@ body {
 </style>
 <div id="particle-canvas"></div>
 <div class="hero">
-  <h1>Observable Frameworks</h1>
-  <h2 class="subhead">Glyphmap experiments</h2> 
+  <h1>Decarbonisation Planner</h1>
+  <h2 class="subhead">Glyphmap experiments</h2>
+</div>
+<div class="has-text-centered">
+  <a target="_blank" style="text-decoration:none; color: black;" href="./dashboard" class="button is-large is-primary">Dashboard</a>
 </div>
 <div class="observablehq observablehq--block"><!--:5f68ec61:--></div>
 </main>
