--- a/dashboard.html
+++ b/dashboard.html
@@ -208,10 +208,10 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1732426160754});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1732426160766});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1732426160766});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1732426160766});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1732462438084});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1732462438092});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1732462438092});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1732462438092});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
 define({id: "f286dfde", outputs: ["d3","flubber","require","Mutable","TimeGlyph","GlyphCollection","turf","RadialGlyph","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","Model","BudgetAllocator","MiniDecarbModel","createTable","createTimelineInterface","YearPicker","inferTypes","enrichGeoData","normaliseData","downloadBoundaries","joinCensusDataToGeoJSON","convertGridCsvToGeoJson","context2d"], body: async () => {
@@ -414,10 +414,10 @@ resize((width, height) => createGlyphMap(map_aggregate, {width, height}))
 ))
 }});
 
-define({id: "42bc8a72", mode: "inline", inputs: ["createTimelineInterface","interventions","selectIntervention","display"], body: async (createTimelineInterface,interventions,selectIntervention,display) => {
+define({id: "ac295143", mode: "inline", inputs: ["createTimelineInterface","interventions","selectIntervention","display"], body: async (createTimelineInterface,interventions,selectIntervention,display) => {
 display(await(
 createTimelineInterface(
-            interventions, 
+            interventions,
             () => {},
             (click) => {
               selectIntervention(click);
@@ -429,9 +429,9 @@ createTimelineInterface(
 ))
 }});
 
-define({id: "4701b4bf", mode: "inline", inputs: ["html","display"], body: async (html,display) => {
+define({id: "4629509f", mode: "inline", inputs: ["html","display"], body: async (html,display) => {
 display(await(
-html`<button class="btn erase" aria-label="Delete" 
+html`<button class="btn erase" aria-label="Delete"
           onclick=${(e) => {
             e.stopPropagation();
             console.log("clicked block", e);
@@ -492,7 +492,7 @@ define({id: "09682a6e", body: () => {
 // );
 }});
 
-define({id: "9e56967a", inputs: ["Inputs","html","selectedIntervention","Generators","Event","allColumns"], outputs: ["techsInput","technology","totalBudgetInput","total_budget","startYearInput","start_year","projectLengthInput","project_length","allocationTypeInput","allocation_type","priorityInput","priority_input","filterInput","filter_input","glyphmapTypeInput","glyphmapType","mapAggregationInput","map_aggregate","morphFactorInput","morph_factor"], body: (Inputs,html,selectedIntervention,Generators,Event,allColumns) => {
+define({id: "e6d57427", inputs: ["Inputs","html","selectedIntervention","Generators","Event","allColumns"], outputs: ["techsInput","technology","totalBudgetInput","total_budget","startYearInput","start_year","projectLengthInput","project_length","allocationTypeInput","allocation_type","priorityInput","priority_input","filterInput","filter_input","glyphmapTypeInput","glyphmapType","mapAggregationInput","map_aggregate","morphFactorInput","morph_factor"], body: (Inputs,html,selectedIntervention,Generators,Event,allColumns) => {
 // list of decarb technologies
 const techsInput = Inputs.select(
   [
@@ -555,10 +555,10 @@ const startYearInput = html`<input
 const start_year = Generators.input(startYearInput);
 
 // Project Length
-const projectLengthInput = Inputs.range([0, 20], {
+const projectLengthInput = Inputs.range([0, 10], {
   // label: html`<b>Project length in years</b>`,
   step: 1,
-  value: 10,
+  value: 5,
 });
 projectLengthInput.number.style["max-width"] = "60px";
 Object.assign(projectLengthInput, {
@@ -682,7 +682,7 @@ let results = getResults;
 return {interventions,results};
 }});
 
-define({id: "f1a3064a", inputs: ["setIntervention","interventions","runModel","buildingsData","setResults","results","start_year","technology","allocations","listOfTech"], outputs: ["createConfigTemplate","addIntervention","removeIntervention","addNewIntervention"], body: (setIntervention,interventions,runModel,buildingsData,setResults,results,start_year,technology,allocations,listOfTech) => {
+define({id: "db9c502b", inputs: ["setIntervention","interventions","runModel","buildingsData","setResults","results","start_year","technology","allocations","listOfTech"], outputs: ["createConfigTemplate","addIntervention","removeIntervention","addNewIntervention"], body: (setIntervention,interventions,runModel,buildingsData,setResults,results,start_year,technology,allocations,listOfTech) => {
 // create config template
 function createConfigTemplate(start_year, allocations) {
   return {
@@ -742,6 +742,13 @@ function addNewIntervention() {
   const new_start_year = start_year;
   const new_tech = technology;
   const new_allocations = allocations;
+
+  // if result exist, take the remaining budget from the latest year
+  // and add it to this first year budget
+  if (results.length > 0) {
+    const latestResult = results[results.length - 1];
+    new_allocations[0].budget += latestResult.remainingBudget;
+  }
 
   // Retrieve techConfig from the selected technology
   const techConfig = listOfTech[new_tech];
@@ -1771,7 +1778,7 @@ body, html {
 /* Hover effect for buttons */
 #timeline-buttons .btn:hover {
   transform: scale(1.1);
-  background-color: #e0e0e0; 
+  background-color: #e0e0e0;
 }
 
 #timeline-buttons .btn i {
@@ -1841,13 +1848,13 @@ body, html {
       <br>
       <div id="graph-container">
         <div id="timeline-panel">
-          <observablehq-loading></observablehq-loading><!--:42bc8a72:-->
+          <observablehq-loading></observablehq-loading><!--:ac295143:-->
         </div>
         <nav id="timeline-buttons">
           <button class="btn edit" aria-label="Edit">
             <i class="fas fa-edit" style="color:green;"></i>
           </button>
-          <observablehq-loading></observablehq-loading><!--:4701b4bf:-->
+          <observablehq-loading></observablehq-loading><!--:4629509f:-->
           <button class="btn move-up" aria-label="Move Up">
             <i class="fas fa-arrow-up"></i>
           </button>
@@ -1866,14 +1873,14 @@ body, html {
 <div class="observablehq observablehq--block"><!--:e78cdcee:--></div>
 <div class="observablehq observablehq--block"><!--:09682a6e:--></div>
 <!-- ---------------- Input form declarations ---------------- -->
-<div class="observablehq observablehq--block"><!--:9e56967a:--></div>
+<div class="observablehq observablehq--block"><!--:e6d57427:--></div>
 <div class="observablehq observablehq--block"><!--:fbf1b5a3:--></div>
 <div class="observablehq observablehq--block"><!--:39e29da4:--></div>
 <div class="observablehq observablehq--block"><!--:30ef2d9c:--></div>
 <div class="observablehq observablehq--block"><!--:ef7c3c21:--></div>
 <div class="observablehq observablehq--block"><!--:def3b8eb:--></div>
 <!-- ---------------- Functions ---------------- -->
-<div class="observablehq observablehq--block"><!--:f1a3064a:--></div>
+<div class="observablehq observablehq--block"><!--:db9c502b:--></div>
 <div class="observablehq observablehq--block"><!--:a84f1691:--></div>
 <div class="observablehq observablehq--block"><!--:8216304d:--></div>
 <!-- ---------------- Sortable Table ---------------- -->
